# Bellman-practice

./: Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs  proof_uncompressed.json  vkey_uncompressed.json
src/parser/: parser.rs
src/snark/: mod.rs
src/snark-bellman/: snark_bellman.rs  types.rs
